k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nodejs-example
  name: nodejs-example
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejs-example
  template:
    metadata:
      labels:
        app: nodejs-example
    spec:
      containers:
        - image: image-registry.openshift-image-registry.svc:5000/nodejs-example/nodejs-example
          imagePullPolicy: Always
          name: nodejs-example
          ports:
            - containerPort: 8080
              protocol: TCP
