k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nodejs-example
  name: nodejs-example
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: nodejs-example
