k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: nodejs-example
  name: nodejs-example
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: nodejs-example
    weight: 100
  wildcardPolicy: None
